--- a/source/scss/_blocks/_uniqueness.scss
+++ b/source/scss/_blocks/_uniqueness.scss
@@ -2,19 +2,60 @@
   color: $white;
   height: calc(100vw * (670 / 1920));
   padding: calc(100vw * (220 / 1920)) calc(100vw * (245 / 1920)) 0;
-
   background: $black url('../img/uniqueness.png') no-repeat top left;
   background-size: 100% 100%;
+
+  @include xl {
+    height: calc(100vw * (670 / $xl));
+    padding: calc(100vw * (224 / $xl)) calc(100vw * (155 / $xl)) 0;
+    background-image: url('../img/uniqueness_xl.png');
+  }
+
+  @include lg {
+    height: calc(100vw * (450 / $lg));
+    padding: calc(100vw * (138 / $lg)) calc(100vw * (97 / $lg)) 0;
+    background-image: url('../img/uniqueness_lg.png');
+  }
+
+  @include sm {
+    height: calc(100vw * (360 / $sm));
+    padding: calc(100vw * (54 / $sm)) calc(100vw * (61 / $sm)) 0;
+    background-image: url('../img/uniqueness_sm.png');
+  }
 
   &__wrapper {
     width: calc(100vw * (570 / 1920));
     margin-left: auto;
+
+    @include xl {
+      width: calc(100vw * (520 / $xl));
+    }
+
+    @include lg {
+      width: calc(100vw * (370 / $lg));
+    }
+
+    @include sm {
+      width: calc(100vw * (270 / $sm));
+    }
   }
 
   &__title {
     color: inherit;
     text-transform: uppercase;
     margin-bottom: calc(100vw * (30 / 1920));
+
+    @include xl {
+      margin-bottom: calc(100vw * (35 / $xl));
+    }
+
+    @include lg {
+      margin-bottom: calc(100vw * (25 / $lg));
+    }
+
+    @include sm {
+      margin-bottom: calc(100vw * (30 / $sm));
+    }
   }
 
   &__logo {
@@ -25,10 +66,17 @@
     font-size: calc(100vw * (20 / 1920));
     line-height: 1.3;
     text-align: justify;
-  }
 
-  &__link {
-    margin-top: calc(100vw * (50 / 1920));
-    margin-inline: auto;
+    @include xl {
+      font-size: calc(100vw * (20 / $xl));
+    }
+
+    @include lg {
+      font-size: calc(100vw * (15 / $lg));
+    }
+
+    @include sm {
+      font-size: calc(100vw * (15 / $sm));
+    }
   }
 }
