--- a/source/scss/_blocks/_products-sc.scss
+++ b/source/scss/_blocks/_products-sc.scss
@@ -1,4 +1,4 @@
-.novelties-sc {
+.products-sc {
   padding: calc(100vw * (100 / 1920)) calc(100vw * (100 / 1920)) calc(100vw * (50 / 1920));
   background-color: $white;
 
