--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -19,7 +19,7 @@
 @import '_blocks/about-sc';
 @import '_blocks/catalog-sc';
 @import '_blocks/delivery-sc';
-@import '_blocks/novelties-sc';
+@import '_blocks/products-sc';
 @import '_blocks/card';
 @import '_blocks/uniqueness';
 @import '_blocks/faq';
@@ -27,4 +27,10 @@
 @import '_blocks/callback';
 @import '_blocks/quote';
 @import '_blocks/footer';
+@import '_blocks/product-top';
+@import '_blocks/product-info';
+@import '_blocks/equipment';
+@import '_blocks/characteristics';
+@import '_blocks/category';
+@import '_blocks/pagination';
 
